<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="416dp"
        android:layout_height="847dp"
        android:adjustViewBounds="false"
        android:alpha="0.6"
        android:background="#FF8400"
        android:backgroundTint="#FF9100"
        android:backgroundTintMode="src_atop"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="300dp"
        android:foreground="@drawable/after_noon"
        android:foregroundGravity="fill_vertical|center_horizontal"
        android:foregroundTint="#66FF6600"
        android:foregroundTintMode="src_in"
        android:importantForAccessibility="no"
        android:layerType="hardware"
        android:scaleType="centerCrop"
        app:tint="#2D2F31"
        app:tintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/night" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/pogodynka"
        android:textColor="#3F51B5"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showWeather"
        android:text="@string/show"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="299dp"
        android:layout_height="61dp"
        android:autofillHints="Sopot"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

</androidx.constraintlayout.widget.ConstraintLayout>